# 3DTriangle

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: .workflow.yml
debug/: compare.py  main.cpp
graph/: graph_maker.py
line/: line.cpp  line.h  line_segment.h
octree/: octree.cpp  octree.h
plane/: plane.cpp  plane.h
point/: point.cpp  point.h
point_vector/: point.h  vector.h
test/: unit_test.cpp
test/line/: test.h
test/octree/: test.h
test/plane/: test.h
test/test_files/: file12.txt  file13ans.txt  file15.txt  file15ans.txt  file2.txt  file2ans.txt  file3.txt  file3ans.txt  file4.txt  file4ans.txt  file5.txt  file6ans.txt
test/triangle/: test.h
test/vector/: test.h
triangle/: intersection.cpp  triangle.cpp  triangle.h
vector/: vector.cpp  vector.h
